refactor(persistence): replace jooq with spring data